--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -50,28 +50,31 @@
     </ul>
     <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-            <div ui-view="services">
+            <div id="servicesViewContainer">
+                <div id="servicesView"  ui-view="services">
 
-                <h1>{{allPages[3].pagehead}}</h1>
-                <p class="pagedescription">{{allPages[3].pagedescription}}</p>
+                    <h1>{{allPages[3].pagehead}}</h1>
+                    <p class="pagedescription">{{allPages[3].pagedescription}}</p>
 
-                <img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена">
+                    <img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена">
 
-                <div class="row">
-                    <div class="col-sm-12  text-center ">
-                        <a class="secondlink" ui-sref="home.povsednevnaya.vhodit" ui-sref-active="active">Что входит в поддерживающую уборку</a>
+                    <div class="row">
+                        <div class="col-sm-12  text-center ">
+                            <a class="secondlink" ui-sref="home.povsednevnaya.vhodit" ui-sref-active="active">Что входит в поддерживающую уборку</a>
+                        </div>
+                        <div class="col-sm-12 text-center mt10">
+                            <a class="secondlink" ui-sref="home.povsednevnaya.price" ui-sref-active="active">Цены на поддерживающую уборку</a>
+
+                        </div>
+                        <div class="col-sm-12 text-center mt20">
+                            <a class="btn btn-primary" ui-sref="home.zakaz">Заказать поддерживающую уборку</a>
+                        </div>
                     </div>
-                    <div class="col-sm-12 text-center mt10">
-                        <a class="secondlink" ui-sref="home.povsednevnaya.price" ui-sref-active="active">Цены на поддерживающую уборку</a>
 
-                    </div>
-                    <div class="col-sm-12 text-center mt20">
-                        <a class="btn btn-primary" ui-sref="home.zakaz">Заказать поддерживающую уборку</a>
-                    </div>
+
                 </div>
+            </div>
 
-
-        </div>
     </div>
 
 </section>
