--- a/client/templates/services.general.html
+++ b/client/templates/services.general.html
@@ -2,8 +2,11 @@
 <p class="pagedescription">{{pageData.pagedescription}}</p>
 <!--<p>{{pageData.text}}</p>-->
 
-<div id="servicesGeneralView" ui-view="servicesGeneral"><img class="defaultBottomImage" src="/assets/img/general.png" alt="Генеральная уборка в Москве цены"></div>
-
+<div id="servicesGeneralViewContainer">
+    <div id="servicesGeneralView" ui-view="servicesGeneral">
+        <img class="defaultBottomImage" src="/assets/img/general.png" alt="Генеральная уборка в Москве цены">
+    </div>
+</div>
 <div class="row">
     <div class="col-sm-12 text-center">
         <a class="secondlink" ui-sref="home.generalnaya.vhodit" ui-sref-active="active">Что входит в генеральную уборку</a>
