--- a/client/templates/services.repair.html
+++ b/client/templates/services.repair.html
@@ -1,9 +1,11 @@
 <h1>{{pageData.pagehead}}</h1>
 <p class="pagedescription">{{pageData.pagedescription}}</p>
 <!--<p>{{pageData.text}}</p>-->
-
-<div id="servicesRepairView" ui-view="servicesRepair"><img class="defaultBottomImage" src="/assets/img/repair.png" alt="Уборка после ремонта в Москве цены"></div>
-
+<div id="servicesRepairViewContainer">
+    <div id="servicesRepairView" ui-view="servicesRepair">
+        <img class="defaultBottomImage" src="/assets/img/repair.png" alt="Уборка после ремонта в Москве цены">
+    </div>
+</div>
 <div class="row">
     <div class="col-sm-12 text-center">
         <a class="secondlink"  ui-sref="home.remont.vhodit" ui-sref-active="active">Что входит в уборку после ремонта</a>
