--- a/client/templates/services.supporting.html
+++ b/client/templates/services.supporting.html
@@ -1,8 +1,12 @@
 <h1>{{pageData.pagehead}}</h1>
 <p class="pagedescription">{{pageData.pagedescription}}</p>
 <!--<p>{{pageData.text}}</p>-->
+<div id="servicesPovsednevnayaViewContainer">
+    <div id="servicesPovsednevnayaView" ui-view="servicesPovsednevnaya">
+        <img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена"/>
+    </div>
+</div>
 
-<div id="servicesPovsednevnayaView" ui-view="servicesPovsednevnaya"><img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена"></div>
 
 <div class="row">
     <div class="col-sm-12  text-center ">
