--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -11,6 +11,7 @@
                 <li><a data-ui-sref="home.review" data-ui-sref-active="active">Отзывы</a></li>
                 <li><a data-ui-sref="home.zakaz" data-ui-sref-active="active">Заказать</a></li>
             </ul>
+            <h3 class="main_phone">+7 (916) 449-78-26</h3>
         </div>
 
     </div>
