--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -218,50 +218,59 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="form-group">
+                            <label for="work_type">Вид уборки</label>
+                            <select id="work_type" class="form-control" name="work_type"  ng-model="order.work_type" ng-options="y for (x,y) in cleanTypeOptions"></select>
+                           <i class="select_dropdown"><span class="glyphicon glyphicon-triangle-bottom"></span></i>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label for="workdate">Дата уборки</label>
+                            <select id="workdate" class="form-control" name="work_type"  ng-model="order.work_date" ng-options="y for (x,y) in dateOptions"></select>
+                            <i class="select_dropdown"><span class="glyphicon glyphicon-triangle-bottom"></span></i>
+
+                            <!--<div class='input-group date' id='datetimepicker1'>-->
+                                <!--&lt;!&ndash;  &ndash;&gt;-->
+                                <!--<datepicker  date-format="EEEE d MMMM h:mm" datepicker-show="{{DPvisibility}}" datepicker-toggle="false">-->
+                                    <!--<input ng-model="order.work_date"  class="form-control"  type="text"/>-->
+                                <!--</datepicker>-->
+
+                <!--<span class="input-group-addon" ng-click="toggleDatePicker()">-->
+                    <!--<span class="glyphicon glyphicon-calendar"></span>-->
+                <!--</span>-->
+                            <!--</div>-->
+
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <div class="form-group">
                             <label for="phone">Телефон</label>
                             <input id="phone" name="phone" type="text" class="form-control" ng-model="order.phone" required />
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label for="name">Имя</label>
+                            <label for="name">Как к Вам обращаться</label>
                             <input id="name" name="name" type="text" class="form-control" ng-model="order.name" />
                         </div>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="form-group">
-                            <label for="datetimepicker1">Дата уборки</label>
-                            <div class='input-group date' id='datetimepicker1'>
-                                <!--  -->
-                                <datepicker  date-format="EEEE d MMMM h:mm" datepicker-show="{{DPvisibility}}" datepicker-toggle="false">
-                                    <input ng-model="order.work_date"  class="form-control"  type="text"/>
-                                </datepicker>
 
-                <span class="input-group-addon" ng-click="toggleDatePicker()">
-                    <span class="glyphicon glyphicon-calendar"></span>
-                </span>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="form-group">
-                            <label for="work_type">Вид уборки</label>
-                            <select id="work_type" class="form-control" name="work_type"  ng-model="order.work_type" ng-options="y for (x,y) in cleanTypeOptions"></select>
-                        </div>
-                    </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label for="workplace">Помещение</label>
                             <select id="workplace" class="form-control" name="workplace"  ng-model="order.workplace" ng-options="y for (x,y) in workPlaceOptions"></select>
+                            <i class="select_dropdown"><span class="glyphicon glyphicon-triangle-bottom"></span></i>
+
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="form-group">
                             <label for="area">Площадь (м<sup>2</sup>)</label>
                             <select id="area" class="form-control" name="area"  ng-model="order.area" ng-options="y for (x,y) in areaOptions"></select>
+                            <i class="select_dropdown"><span class="glyphicon glyphicon-triangle-bottom"></span></i>
 
                         </div>
                     </div>
