--- a/client/templates/services.repair.html
+++ b/client/templates/services.repair.html
@@ -1,6 +1,6 @@
 <h1>{{pageData.pagehead}}</h1>
-<p class="pagedescription">{{pageData.pagedescription}}</p>
-<!--<p>{{pageData.text}}</p>-->
+<p class="pagedescription" ng-bind-html="pageData.pagedescription|nl2br"></p>
+
 <div id="servicesRepairViewContainer">
     <div id="servicesRepairView" ui-view="servicesRepair">
         <img class="defaultBottomImage" src="/assets/img/repair.png" alt="Уборка после ремонта в Москве цены">
