--- a/client/templates/services.supporting.html
+++ b/client/templates/services.supporting.html
@@ -1,6 +1,6 @@
 <h1>{{pageData.pagehead}}</h1>
-<p class="pagedescription">{{pageData.pagedescription}}</p>
-<!--<p>{{pageData.text}}</p>-->
+<p class="pagedescription" ng-bind-html="pageData.pagedescription|nl2br"></p>
+
 <div id="servicesPovsednevnayaViewContainer">
     <div id="servicesPovsednevnayaView" ui-view="servicesPovsednevnaya">
         <img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена"/>
