--- a/client/source/css/style.css
+++ b/client/source/css/style.css
@@ -411,13 +411,15 @@ section {
 }
 #clearSection {
     /*height: 600px;*/
-    /*background: #000;*/
     min-height: 600px;
     background-image: url(../img/clean4.jpg);
-    background-position: top center;
+    /*background-position: top center;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    background-color: transparent;
 }
 .lead {
     position: relative;
@@ -557,6 +559,10 @@ select::-ms-expand {
     height: 600px;
     background-size: cover;
     background-repeat: no-repeat;
+
+    background-attachment: fixed;
+    background-position: center center;
+    background-color: transparent;
 }
 /*#reviewSection .info {*/
     /*font-family: HelveticaThin, sans-serif;*/
