--- a/client/templates/services.windows.tasks.html
+++ b/client/templates/services.windows.tasks.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
         <h2 class="vhoditLead">в мойку окон входит: </h2>
-        <ul class="vhoditItems">
+        <ul class="vhoditItems col-sm-offset-1">
             <li ng-repeat="task in taskData | filter : {parent_id : '4'} ">
                 <p><i class="glyphicon glyphicon-ok"></i>{{task.name}}</p>
             </li>
