--- a/client/source/css/style.css
+++ b/client/source/css/style.css
@@ -137,11 +137,13 @@ ul[rn-carousel-transition="hexagon"] {
 .rn-carousel-control {
     -webkit-transition: opacity 0.2s ease-out;
     transition: opacity 0.2s ease-out;
-    font-size: 2rem;
+    font-size: 4rem;
     position: absolute;
-    top: 40%;
+    top: 272px;
     opacity: 0.75;
     cursor: pointer;
+    /*color: #4ea6d3;*/
+    color: #fff;
 }
 .rn-carousel-control:hover {
     opacity: 1;
@@ -150,13 +152,44 @@ ul[rn-carousel-transition="hexagon"] {
     left: 0.5em;
 }
 .rn-carousel-control.rn-carousel-control-prev:before {
-    content: "<";
+    font-family: 'Glyphicons Halflings';
+    /*content: "<";*/
+    content: "\e257";
+    position: relative;
+    left: 5px;
+
+}
+.rn-carousel-control.rn-carousel-control-prev:after {
+    font-family: "HelveticaRegular", sans-serif;
+    content: "●";
+    font-size: 147px;
+    position: absolute;
+    z-index:-1;
+    top:-73px;
+    left:-17px;
+    color: rgba(0,0,0,.4);
+
 }
 .rn-carousel-control.rn-carousel-control-next {
     right: 0.5em;
 }
 .rn-carousel-control.rn-carousel-control-next:before {
-    content: ">";
+    /*content: ">";*/
+    font-family: 'Glyphicons Halflings';
+    content: "\e258";
+    position: relative;
+    left: -5px;
+}
+.rn-carousel-control.rn-carousel-control-next:after {
+    font-family: "HelveticaRegular", sans-serif;
+    content: "●";
+    font-size: 147px;
+    position: absolute;
+    z-index:-1;
+    top:-73px;
+    left:-30px;
+    color: rgba(0,0,0,.4);
+
 }
 .top-carousel .lead {
     position: absolute;
@@ -209,13 +242,51 @@ div.rn-carousel-indicator span.active {
     margin: 0;
     background-color: transparent;
 }
+
+
+
+/*   ui-carousel    */
+
+.top_carousel {
+    height:500px;
+}
 .caruwrap {
-    height: 100%;
+    height: 500px;
     width: 100%;
     -webkit-background-size:cover;
     background-size:cover;
     background-repeat: no-repeat;
 }
+.top_carousel .caru_lead {
+    position: relative;
+    top:100px;
+    left:50px;
+    color: rgba(0,0,0,0.4);
+    font-weight:bold;
+    font-size:48px;
+    line-height:1;
+
+}
+
+.top_carousel .text {
+    position: relative;
+    top:330px;
+    color: #fff;
+    font-size:18px;
+    line-height: 1.2;
+    background-color: rgba(0,0,0,0.3);
+    border: none;
+    border-radius: 0;
+}
+.ui-carousel .carousel-wrapper {
+    position: relative;
+}
+
+
+
+
+
+
 .navbar {
     margin-bottom: 10px;
 }
@@ -756,3 +827,7 @@ label {
 @media only screen and (min-width : 1200px) {
 
 }
+
+
+
+
