--- a/client/templates/services.repair.html
+++ b/client/templates/services.repair.html
@@ -1,21 +1,23 @@
-<h1>{{pageData.pagehead}}</h1>
-<p class="pagedescription" ng-bind-html="pageData.pagedescription|nl2br"></p>
-
-<div id="servicesRepairViewContainer">
-    <div id="servicesRepairView" ui-view="servicesRepair">
-        <img class="defaultBottomImage" src="/assets/img/repair.png" alt="Уборка после ремонта в Москве цены">
-    </div>
-</div>
 <div class="row">
-    <div class="col-sm-12 text-center">
-        <a class="secondlink"  ui-sref="home.remont.vhodit" ui-sref-active="active">Что входит в уборку после ремонта</a>
+    <div class="col-sm-6 servicePadding">
+        <h1>{{pageData.pagehead}}</h1>
+        <div>
+            <a class="secondlink" ui-sref="home.remont.price" ui-sref-active="active">Цены</a>
+            <a class="secondlink"  ui-sref="home.remont.vhodit" ui-sref-active="active">Что входит</a>
+        </div>
+        <p class="pagedescription" ng-bind-html="pageData.pagedescription|nl2br"></p>
+        <div class="row">
+            <div class="text-left mt20">
+                <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать</a>
+            </div>
+        </div>
     </div>
-    <div class="col-sm-12 text-center mt10">
-        <a class="secondlink" ui-sref="home.remont.price" ui-sref-active="active">Цены на уборку после ремонта</a>
-    </div>
-    <div class="col-sm-12 text-center mt20">
-        <a class="btn btn-primary" data-ui-sref="home.zakaz">Заказать уборку после ремонта</a>
+    <div class="col-sm-6">
+        <div id="servicesRepairViewContainer">
+            <div id="servicesRepairView" ui-view="servicesRepair">
+                <img class="defaultBottomImage" src="/assets/img/repair.png" alt="Уборка после ремонта в Москве цены">
+            </div>
+        </div>
     </div>
 </div>
-
 
