--- a/client/templates/services.supporting.html
+++ b/client/templates/services.supporting.html
@@ -1,22 +1,31 @@
-<h1>{{pageData.pagehead}}</h1>
-<p class="pagedescription" ng-bind-html="pageData.pagedescription|nl2br"></p>
-
-<div id="servicesPovsednevnayaViewContainer">
-    <div id="servicesPovsednevnayaView" ui-view="servicesPovsednevnaya">
-        <img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена"/>
-    </div>
-</div>
-
-
 <div class="row">
-    <div class="col-sm-12  text-center ">
-        <a class="secondlink" ui-sref="home.povsednevnaya.vhodit" ui-sref-active="active">Что входит в поддерживающую уборку</a>
+    <div class="col-sm-6 servicePadding">
+        <h1>{{pageData.pagehead}}</h1>
+        <div >
+            <a class="secondlink" ui-sref="home.povsednevnaya.price" ui-sref-active="active">Цены</a>
+            <a class="secondlink" ui-sref="home.povsednevnaya.vhodit" ui-sref-active="active">Что входит</a>
+        </div>
+        <p class="pagedescription" ng-bind-html="pageData.pagedescription|nl2br"></p>
+
+        <div class="row">
+            <div class=" text-left mt20">
+                <a class="btn btn-primary" ui-sref="home.zakaz">Заказать</a>
+            </div>
+        </div>
     </div>
-    <div class="col-sm-12 text-center mt10">
-        <a class="secondlink" ui-sref="home.povsednevnaya.price" ui-sref-active="active">Цены на поддерживающую уборку</a>
-    </div>
-    <div class="col-sm-12 text-center mt20">
-        <a class="btn btn-primary" ui-sref="home.zakaz">Заказать поддерживающую уборку</a>
+    <div class="col-sm-6">
+        <div id="servicesPovsednevnayaViewContainer">
+            <div id="servicesPovsednevnayaView" ui-view="servicesPovsednevnaya">
+                <img class="defaultBottomImage" src="/assets/img/supporting.png" alt="Поддерживающая уборка в Москве цена"/>
+            </div>
+        </div>
     </div>
 </div>
+
+
+
+
+
+
+
 
