--- a/client/templates/services.windows.price.html
+++ b/client/templates/services.windows.price.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-sm-8 col-sm-offset-2 text-center">
+    <div class="col-sm-12 text-center mt80">
         <h2 class="vhoditLead">Цены на мойку окон: </h2>
         <ul class="priceItems">
             <li ng-repeat="price in priceData | filter : {type_id : '4'} ">
