--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -121,7 +121,7 @@
 
 <section class="uslugi darkSection" id="servicesSection">
     <div class="uslugi_head">
-        <h2 class="pagename">{{allPages[1].pagehead}}</h2>
+        <h2 class="pagename">Виды работ</h2>
         <div class="topMenu">
             <div class="row">
                 <div class="col-xs-3 us_menusection">
