--- a/client/source/css/style.css
+++ b/client/source/css/style.css
@@ -394,6 +394,7 @@ h1{
 }
 .triangle_svg {
     width: 70px;
+    height: 70px;
     position: absolute;
     left:50%;
     margin-left: -35px;
@@ -773,6 +774,7 @@ select::-ms-expand {
 #reviewSection .triangle_svg{
     display: block;
     width: 50px;
+    height: 50px;
     position: absolute;
     left: 30px;
     top:-35px;
