--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -20,25 +20,6 @@
 <h3 class="logolead ">{{pageData.pagehead}}</h3>
 
 <section class="top_carousel hidden-xs">
-    <!--<ui-carousel-->
-            <!--slides="homeData"-->
-            <!--slides-to-show="1"-->
-            <!--slides-to-scroll="1"-->
-            <!--initial-slide="1"-->
-            <!--autoplay="true"-->
-            <!--autoplay-speed="8000"-->
-            <!--dots="false"-->
-            <!--on-after-change="carouselSlideIn()"-->
-            <!--on-before-change="carouselSlideOut()">-->
-
-        <!--<carousel-item>-->
-
-            <!--<div class="caruwrap" ng-style="{'background-image':'url(/assets/img/{{item.image}})'}">-->
-                <!--<h2 class="caru_lead">{{ item.lead }}</h2>-->
-                <!--<p class="text" ng-bind-html="item.text|nl2br"></p>-->
-        <!--</carousel-item>-->
-    <!--</ui-carousel>-->
-
 
 
     <slick settings="slickTopConfig" infinite=true slides-to-show=1 slides-to-scroll=1 ng-if="slickTopGo">
@@ -54,7 +35,6 @@
                 </div>
                 <h2 class="caru_lead"> {{ slide.lead }}</h2>
                 <h2 class="caru_lead2"> {{ slide.lead2 }}</h2>
-                <!--<p class="caru_text"  ng-bind-html="slide.text|nl2br"></p>-->
 
             </div>
         </div>
@@ -65,10 +45,10 @@
 	.button_x5F_left_st0{fill:none;stroke-width:3;stroke-miterlimit:10;}
     .button_x5F_left_st1{fill:none;stroke-width:3;stroke-linecap:round;stroke-miterlimit:10;}
 </style>
-<g id="button_x5F_left">
-	<circle id="button_x5F_left_circle_1_" class="button_x5F_left_st0" cx="49.7" cy="50" r="46.4"/>
-	<line id="button_x5F_left_line1_" class="button_x5F_left_st1" x1="38.9" y1="50" x2="61.5" y2="27.5"/>
-	<line id="button_x5F_left_line2_" class="button_x5F_left_st1" x1="38.9" y1="50.5" x2="61.5" y2="73"/>
+<g >
+	<circle  class="button_x5F_left_st0" cx="49.7" cy="50" r="46.4"/>
+	<line  class="button_x5F_left_st1" x1="38.9" y1="50" x2="61.5" y2="27.5"/>
+	<line  class="button_x5F_left_st1" x1="38.9" y1="50.5" x2="61.5" y2="73"/>
 </g>
 </svg></a>
     <a class="carouselControl slickNext" ng-click="slickTopConfig.method.slickNext()"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -77,10 +57,10 @@
 	.button_x5F_right_st0{fill:none;stroke-width:3;stroke-miterlimit:10;}
     .button_x5F_right_st1{fill:none;stroke-width:3;stroke-linecap:round;stroke-miterlimit:10;}
 </style>
-<g id="button_x5F_right">
-	<circle id="button_x5F_right_circle_2_" class="button_x5F_right_st0" cx="49.7" cy="50" r="46.4"/>
-	<line id="button_x5F_right_line1_" class="button_x5F_right_st1" x1="61.5" y1="50.5" x2="38.9" y2="73"/>
-	<line id="button_x5F_right_line2_" class="button_x5F_right_st1" x1="61.5" y1="50" x2="38.9" y2="27.5"/>
+<g >
+	<circle  class="button_x5F_right_st0" cx="49.7" cy="50" r="46.4"/>
+	<line  class="button_x5F_right_st1" x1="61.5" y1="50.5" x2="38.9" y2="73"/>
+	<line  class="button_x5F_right_st1" x1="61.5" y1="50" x2="38.9" y2="27.5"/>
 </g>
 </svg></a>
 
@@ -328,12 +308,6 @@
 
 </section>
 
-
-<!--<section id="clearSection" >-->
-    <!--<h2 class="lead">{{allPages[2].pagehead}}</h2>-->
-    <!--<p class="text">{{allPages[2].pagedescription}}</p>-->
-    <!--&lt;!&ndash;<p class="text">{{allPages[2].text}}</p>&ndash;&gt;-->
-<!--</section>-->
 <section id="advantagesSection" class="whiteSection" >
     <!--<h2 class="pagename">{{allPages[6].pagehead}}</h2>-->
     <!--<p class="info text-center">({{allPages[6].pagedescription}})</p>-->
@@ -382,7 +356,9 @@
 
 
 </section>
+
 <!-- заказчики -->
+
 <section id="partnersSection" class="darkSection" >
     <!--<h2 class="pagename">{{allPages[7].pagehead}}</h2>-->
     <div class="row">
@@ -396,22 +372,41 @@
             <p id="partnerText"  ng-bind-html="partnersData[piter].description|nl2br"></p>
 
             <div class="text-center">
-                <a  id="partnersBtn" class="btn btn-primary btn_right_arrow mt50" ng-click="goNextPartner()"><svg
-                                version="1.1" id="partnersArrowSvg" class="svg_arrow"
-                                xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink"
-                                x="0px" y="0px"
-                                width="66px" height="31px"
-                                viewBox="0 0 66 31"
-                                style="enable-background:new 0 0 66 31;"
-                                xml:space="preserve"
-                            >
+                <!--<a  id="partnersBtn" class="btn btn-primary btn_right_arrow mt50" ng-click="goNextPartner()"><svg-->
+                                <!--version="1.1" id="partnersArrowSvg" class="svg_arrow"-->
+                                <!--xmlns="http://www.w3.org/2000/svg"-->
+                                <!--xmlns:xlink="http://www.w3.org/1999/xlink"-->
+                                <!--x="0px" y="0px"-->
+                                <!--width="66px" height="31px"-->
+                                <!--viewBox="0 0 66 31"-->
+                                <!--style="enable-background:new 0 0 66 31;"-->
+                                <!--xml:space="preserve"-->
+                            <!--&gt;-->
+<!--<g >-->
+    <!--<line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" x1="3" y1="15.5" x2="63" y2="15.5"/>-->
+    <!--<line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="49.1" y1="30" x2="63.1" y2="16"/>-->
+    <!--<line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="63.1" y1="15" x2="49.1" y2="1"/>-->
+<!--</g>-->
+								<!--</svg></a>-->
+                <a  id="partnersBtn" class="carouselControl slickNext" ng-click="goNextPartner()"><svg
+                        id="partnersArrowSvg"
+                        version="1.1" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink"
+                        x="0px" y="0px"
+	                    viewBox="0 0 100 100"
+                        style="enable-background:new 0 0 100 100;"
+                        xml:space="preserve">
+<style type="text/css">
+	.button_x5F_right_st0{fill:none;stroke-width:3;stroke-miterlimit:10;}
+    .button_x5F_right_st1{fill:none;stroke-width:3;stroke-linecap:round;stroke-miterlimit:10;}
+</style>
+
+	<circle  class="button_x5F_right_st0" cx="49.7" cy="50" r="46.4"/>
 <g >
-    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" x1="3" y1="15.5" x2="63" y2="15.5"/>
-    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="49.1" y1="30" x2="63.1" y2="16"/>
-    <line  fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"  x1="63.1" y1="15" x2="49.1" y2="1"/>
+	<line  class="button_x5F_right_st1" x1="61.5" y1="50.5" x2="38.9" y2="73"/>
+	<line  class="button_x5F_right_st1" x1="61.5" y1="50" x2="38.9" y2="27.5"/>
 </g>
-								</svg></a>
+</svg></a>
             </div>
         </div>
     </div>
@@ -460,10 +455,10 @@
 	.button_x5F_left_st0{fill:none;stroke-width:3;stroke-miterlimit:10;}
     .button_x5F_left_st1{fill:none;stroke-width:3;stroke-linecap:round;stroke-miterlimit:10;}
 </style>
-<g id="button_x5F_left">
-	<circle id="button_x5F_left_circle_1_" class="button_x5F_left_st0" cx="49.7" cy="50" r="46.4"/>
-	<line id="button_x5F_left_line1_" class="button_x5F_left_st1" x1="38.9" y1="50" x2="61.5" y2="27.5"/>
-	<line id="button_x5F_left_line2_" class="button_x5F_left_st1" x1="38.9" y1="50.5" x2="61.5" y2="73"/>
+<g >
+	<circle  class="button_x5F_left_st0" cx="49.7" cy="50" r="46.4"/>
+	<line  class="button_x5F_left_st1" x1="38.9" y1="50" x2="61.5" y2="27.5"/>
+	<line  class="button_x5F_left_st1" x1="38.9" y1="50.5" x2="61.5" y2="73"/>
 </g>
 </svg></a>
     <a class="carouselControl slickNext" ng-click="slickReviewConfig.method.slickNext()"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -472,10 +467,10 @@
 	.button_x5F_right_st0{fill:none;stroke-width:3;stroke-miterlimit:10;}
     .button_x5F_right_st1{fill:none;stroke-width:3;stroke-linecap:round;stroke-miterlimit:10;}
 </style>
-<g id="button_x5F_right">
-	<circle id="button_x5F_right_circle_2_" class="button_x5F_right_st0" cx="49.7" cy="50" r="46.4"/>
-	<line id="button_x5F_right_line1_" class="button_x5F_right_st1" x1="61.5" y1="50.5" x2="38.9" y2="73"/>
-	<line id="button_x5F_right_line2_" class="button_x5F_right_st1" x1="61.5" y1="50" x2="38.9" y2="27.5"/>
+<g >
+	<circle  class="button_x5F_right_st0" cx="49.7" cy="50" r="46.4"/>
+	<line  class="button_x5F_right_st1" x1="61.5" y1="50.5" x2="38.9" y2="73"/>
+	<line  class="button_x5F_right_st1" x1="61.5" y1="50" x2="38.9" y2="27.5"/>
 </g>
 </svg></a>
 
