header align center

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-top">
     <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header text-center">
             <a href="#" class="navbar-brand"><img src="assets/img/dclogo.png" alt="Динаклининг - уборка с заботой"></a>
-            <ul class="navbar-nav navbar-right hidden-xs">
+            <ul class="navbar-nav hidden-xs">
                 <li><a data-ui-sref="home" data-ui-sref-active="active">Главная</a></li>
                 <li><a data-ui-sref="home.services" data-ui-sref-active="active">Услуги</a></li>
                 <!--<li><a data-ui-sref="home.clean" data-ui-sref-active="active">Чистота</a></li>-->
