--- a/client/source/css/style.css
+++ b/client/source/css/style.css
@@ -303,6 +303,8 @@ h1{
 }
 .navbar-top {
     height: 50px;
+    /*margin-top: 5px;*/
+    padding-top:5px;
 }
 .navbar-header {
     width: 100%;
@@ -312,17 +314,31 @@ h1{
     text-decoration: none;
     list-style-type: none;
     padding: 20px 10px;
+    display: inline-block;
+}
+.navbar-nav {
+    float: left;
+    width: 500px;
+    left: 50%;
+    position: absolute;
+    top: 13px;
+    margin-left: -250px;
+    padding:0;
+}
+.navbar-nav > li {
+    float: none;
 }
 .main_phone {
-    font-size:18px;
+    font-size:20px;
     color: #32c5d2;
     position: absolute;
-    top:35px;
+    top: 13px;
+    /*top:35px;*/
     right:15px;
 }
 .logolead {
     text-transform: uppercase;
-    margin-top: 5px;
+    margin-top: 15px;
     padding-left: 9px;
     margin-bottom: 0;
     font-size:10px;
@@ -869,6 +885,7 @@ label {
 
 
 
+
 /*==========  Desktop First Method  ==========*/
 
 /* Large Devices, Wide Screens */
@@ -915,6 +932,10 @@ label {
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
+    .navbar-top {
+        height: 60px;
+    }
+
     #partnersSection  .slickNext{
         top: 240px;
     }
@@ -962,7 +983,7 @@ label {
     }
 
     .main_phone {
-        top:0px;
+        top:5px;
         font-size:24px;
     }
     .logolead{
@@ -1106,6 +1127,19 @@ label {
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px) {
+
+    .navbar-brand {
+        left: 15%;
+    }
+    .logolead {
+        padding-left: 15%;
+        margin-left: -10px;
+    }
+    .main_phone {
+        right: 15%;
+    }
+
+
 
 }
 
