--- a/client/source/css/style.css
+++ b/client/source/css/style.css
@@ -769,6 +769,7 @@ select::-ms-expand {
     width: 80%;
     margin-left:10%;
     margin-top: 50px;
+    background-color: rgba(0,0,0,0.3);
 }
 #reviewSection .pagename {
     margin-top: 70px;
