debug ipad review2

--- a/client/source/css/style.css
+++ b/client/source/css/style.css
@@ -773,6 +773,7 @@ select::-ms-expand {
 }
 #reviewSection .pagename {
     margin-top: 70px;
+    background-color: rgba(0,0,0,0.3);
 }
 #reviewSection .textBox{
     background-color: #fff;
